--- a/CodeRaspberryPi/PagesHTML/PageConnexion.html
+++ b/CodeRaspberryPi/PagesHTML/PageConnexion.html
@@ -8,28 +8,34 @@
     <title>Page de connexion</title>
 </head>
 <body>
-<div class="centre">
+<style>
+p {
+  border: 2px solid powderblue;
+  margin: 100px;
+}
+</style>
+<div class="mt-4 p-5 bg-success p-3 text-white rounded">
     <h1>Inscription</h1>
      <form action="/action_page.php" class="was-validated">
     <div class="mb-3 mt-3">
-      <label for="uname" class="form-label">Username:</label>
-      <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
-      <div class="valid-feedback">Valid.</div>
-      <div class="invalid-feedback">Please fill out this field.</div>
+      <label for="email" class="form-label">Utilisateur:</label>
+      <input type="email"  id="email" placeholder="Votre E-mail" name="email" required>
+      <div class="valid-feedback">Valide.</div>
+      <div class="invalid-feedback">Requis.</div>
     </div>
     <div class="mb-3">
       <label for="pwd" class="form-label">Password:</label>
       <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
-      <div class="valid-feedback">Valid.</div>
-      <div class="invalid-feedback">Please fill out this field.</div>
+      <div class="valid-feedback">Valide.</div>
+      <div class="invalid-feedback">Requis.</div>
     </div>
     <div class="form-check mb-3">
       <input class="form-check-input" type="checkbox" id="myCheck"  name="remember" required>
-      <label class="form-check-label" for="myCheck">I agree on blabla.</label>
-      <div class="valid-feedback">Valid.</div>
-      <div class="invalid-feedback">Check this checkbox to continue.</div>
+      <label class="form-check-label" for="myCheck">J'ai lu et j'accepte les conditions d'utisation.</label>
+      <div class="valid-feedback">Valide.</div>
+      <div class="invalid-feedback">Requis.</div>
     </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Valider</button>
   </form>
 </div>
 
