Update html_controle_robot version 2.html

--- a/PageWebTest/html_controle_robot version 2.html
+++ b/PageWebTest/html_controle_robot version 2.html
@@ -336,7 +336,7 @@
 <!-- définir les images sur le raspberry pi -->
 
     <div class="col-sm-4">
-      <img class="photo" src="C:\Users\manuc\OneDrive - Collège de Bois-de-Boulogne\Images\Saved Pictures\360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg"> <!-- Image 1 -->
+      <img class="photo" src=""> <!-- Image 1 -->
       <br>
       <img class="photo" src=""> <!-- Image 4 -->
       <br>
