descriptions dans carrousel

--- a/PageWebTest/PageAccueil_html.html
+++ b/PageWebTest/PageAccueil_html.html
@@ -236,13 +236,16 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <h4>"Carrousel #1"<br><span>Changer le texte</span></h4>
+        <h4 style="font-size: smaller;"><span style="font-size: large;"> Objectif du RecoveryCar</span>
+          <br><br>Le Recovery Car est un véhicule motorisé qui se déplace dans son environnement muni d'une caméra.<br>Grâce à sa petite taille, il peut se déplacer dans des endroits étroits généralement inaccessibles aux êtres humains.</h4>
       </div>
       <div class="item">
-        <h4>"Carrousel #2"<br><span>Changer le texte</span></h4>
+        <h4 style="font-size: smaller;"><span style="font-size: large;">Vision en temps réel</span> 
+          <br><br>Le RecoveryCar est munis d'une caméra permettant d'avoir un retour d'images et de prendre des photos en direct.</h4>
       </div>
       <div class="item">
-        <h4>"Carrousel #3"<br><span>Changer le texte</span></h4>
+        <h4 style="font-size: smaller;"><span style="font-size: large;">Analyse de l'environnement</span>
+          <br><br>Le RecoveryCar est aussi munis d'un logiciel de reconnaissance d'objets.<br>Il est donc en mesure d'analyser l'environnement qui l'entoure.</h4>
       </div>
     </div>
 
