--- a/PageWebTest/html_controle_robot version 2.html
+++ b/PageWebTest/html_controle_robot version 2.html
@@ -343,11 +343,11 @@
 <!-- définir les images sur le raspberry pi -->
 
     <div class="col-sm-4">
-      <img class="img-fluid" src="C:\Users\manuc\OneDrive - Collège de Bois-de-Boulogne\Images\Saved Pictures\360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg"> <!-- Image 1 -->
+      <img class="img-fluid" src="https://cdn.pixabay.com/photo/2018/08/15/10/13/network-3607641_1280.jpg"> <!-- Image 1 -->
       <br>
-      <img class="img-fluid" src="C:\Users\manuc\OneDrive - Collège de Bois-de-Boulogne\Images\Saved Pictures\360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg"> <!-- Image 4 -->
+      <img class="img-fluid" src="https://cdn.pixabay.com/photo/2018/08/15/10/13/network-3607641_1280.jpg"> <!-- Image 4 -->
       <br>
-      <img class="img-fluid" src="C:\Users\manuc\OneDrive - Collège de Bois-de-Boulogne\Images\Saved Pictures\360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg"> <!-- Image 7 -->
+      <img class="img-fluid" src="https://cdn.pixabay.com/photo/2018/08/15/10/13/network-3607641_1280.jpg"> <!-- Image 7 -->
       </div>
 
     <div class="col-sm-4">
