mise a jour fichiers html

--- a/PageWebTest/PageGaleriePhotos_html.html
+++ b/PageWebTest/PageGaleriePhotos_html.html
@@ -178,7 +178,7 @@
       <ul class="nav navbar-nav navbar-right">
         <form action="/" method="POST">
             <p>
-                <input class="onglet" type="submit" name="submit" value="Déconnexion">
+                <input class="onglet" type="submit" name="submit" value="Deconnexion">
                 <input class="onglet" type="submit" name="submit" value="Conduite">
 
             </p>
