--- a/CodeRaspberryPi/PagesHTML/PageControle.html
+++ b/CodeRaspberryPi/PagesHTML/PageControle.html
@@ -1,182 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<style>
-
-
-header {
-    background-color: 070707;
-    text-align: center;
-
-}
-
-.onglet {
-
-border: 2px black inset ;
-color: black;
-padding: 8px 25px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 16px;
-margin: 4px 2px;
-cursor: pointer;
-background-color: black;
-color: white;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
-
-.titreDiv {
-    margin: 30px;
-    border: black double 10px;
-    text-align: center;
-    width: auto;
-    height: auto;
-    background-color: EAEAEA;
-}
-
-.cameraDiv {
-    margin: 10px;
-    margin-left: 50px;
-    margin-right: 40px;
-
-    width: 720px;
-    height: 560px;
-
-    border: black solid 3px;
-    text-align: center;
-    background-color: EAEAEA;
-    padding-bottom: 0px;
-    display: inline-block;
-}
-
-
-.mouvementDiv {
-    border: black ridge 3px;
-    text-align: center;
-
-    width: auto;
-    height: auto;
-
-    margin-top: 10px;
-
-    padding: 25px;
-    background-color: EAEAEA;
-    display: inline-block;
-}
-
-.bouton {
-    border: 2px black outset ;
-    border-radius: 60px;
-    color: black;
-    padding: 8px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    background-color: DCDCDC;
-}
-
-
-</style>
-
-
-
 <head>
-    <meta charset="utf-8">
-    <title>RecoveryCar Live</title>
+  <!-- Source thème: https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
+  <title>RecoveryCar</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <! definir une image en favicon avec un lien au directory >
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <style>
+
+  body {
+    font: 400 15px Lato, sans-serif;
+    line-height: 1.8;
+    color: #818181;
+  }
+  h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
+  }
+  .onglet{
+    background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            margin-top: 20px;
+  }
+  .container-fluid {
+    padding: 60px 50px;
+  }
+
+  .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+  }
+  .carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #F60000;
+  }
+  .carousel-indicators li {
+    border-color: #F60000;
+  }
+  .carousel-indicators li.active {
+    background-color: #F60000;
+  }
+  .item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+  }
+  .item span {
+    font-style: normal;
+  }
+
+
+
+  .panel-footer .btn {
+    margin: 15px 0;
+    background-color: #F60000;
+    color: #fff;
+  }
+  .navbar {
+    margin-bottom: 0;
+    background-color:  #00008B;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+    font-family: Montserrat, sans-serif;
+  }
+  .navbar li a, .navbar .navbar-brand {
+    color: #fff !important;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #F60000 !important;
+    background-color: #fff !important;
+  }
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
+  }
+  footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #F60000;
+  }
+
+
+
+
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateY(70%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+  @-webkit-keyframes slide {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(70%);
+    }
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .col-sm-4 {
+      text-align: center;
+      margin: 25px 0;
+    }
+    .btn-lg {
+      width: 100%;
+      margin-bottom: 35px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .logo {
+      font-size: 150px;
+    }
+  }
+  </style>
 </head>
 
-<! -- Header de la page avec les differents onglets disponibles sur le site -- >
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" style="text-align: center; background-color: #fff;">
 
-<header>
-
-
-    <form action="/" method="POST">
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#myPage">RecoveryCar</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <form action="/" method="POST">
             <p>
-                <input class="onglet" type="submit" name="submit" value="Accueil">
-                <input class="onglet" type="submit" name="submit" value="Conduite">
+                <input class="onglet" type="submit" name="submit" value="Deconnexion">
                 <input class="onglet" type="submit" name="submit" value="Galerie">
+
+
 
             </p>
 
     </form>
-
-</header>
-
-
-<body style="background-color:C5C5C5">
-
-    <! -- Tite de la page -- >
-
-    <div class="titreDiv">
-        <h1 style="text-decoration: underline overline; font-size: 42px;">RecoveryCar</h1>
-        <h2 style="color: red;font-size: 30px; text-decoration: underline;">Live</h2>
+      </ul>
     </div>
-
-<! -- division qui regroupe la camera et les boutons -- >
-
-    <div style="text-align: center;">
+  </div>
+</nav>
 
 
+<!-- division pour la camera et les controles -->
+<div id="controleRobot" class="container-fluid text-center" style="margin-top: 5px;">
 
-<! permet de controler le robot avec les touches du clavier >
-        <input type="hidden" name="keypressed" onkeypress="event">
-
-
-
-
-<! -- division d'image de la camera -- >
-        <div class="cameraDiv">
-
-            <h2 style="border: black 2px solid; border-left-width: 0px; border-right-width: 0px; background-color: DCDCDC; font-size: 24px;">Image en temps réel</h2>
-
-            <img src="stream.mjpg" width="630" height="420" style="border: black inset 2px;"/>
-
+    <div class="row">
+      <div class="col-sm-8">
+          <div class="thumbnail">
+              <img src="stream.mjpg" width="540" height="360" style="border: black inset 1px;"/>
+          </div>
         </div>
 
-
-<! -- division des boutons -- >
-        <div class="mouvementDiv">
-
-            <form action="/" method="POST">
-
-<! -- nos differents boutons de deplacement -- >
-
-                <p>
-                    <input class="bouton" type="submit" name="Mode" value="Autonome" style="background-color: 0076FF;">
-                </p>
-
-                <p>
-                    <input class="bouton" type="submit" name="Avant" value="Avant">
-                </p>
+<div class="col-sm-4">
 
 
-                <p>
-                    <input class="bouton" type="submit" name="Gauche" value="Gauche">
-                    <input class="bouton" type="submit" name="Droite" value="Droite">
-                </p>
-
-                <p>
-                    <input class="bouton" type="submit" name="Arriere" value="Arriere">
-                </p>
-
-                <p>
-                    <input class="bouton" style="background-color: red; border-color: black;" type="submit" name="Photo" value="Photo">
-                </p>
-
-            </form>
-
-        </div>
-
-</div>
 
 
-</body>
+<!-- nos differents boutons de deplacement -->
+
+
+
+    <div style="border: #818181 1px solid; margin-top: 120px; padding: 25px; background-color: #f6f6f6;">
+        <form action="/" method="POST">
+            <p>         
+                <input type="submit" class="btn btn-primary" name="submit" value="ModeAuto" style="margin: 7px;">
+            </p>
+
+            <p>
+                <input type="submit" class="btn btn-default" name="submit" value="AvantG" style="margin: 2px;background-color: #e3e3e3">
+                <input type="submit" class="btn btn-default" name="submit" value="Avant" style="margin: 2px">
+                <input type="submit" class="btn btn-default" name="submit" value="AvantD" style="margin: 2px;background-color: #e3e3e3">
+            </p>
+
+
+            <p>
+                <input type="submit" class="btn btn-default" name="submit" value="Gauche" style="margin: 5px">
+                <input type="submit" class="btn btn-default" name="submit" value="Droite" style="margin: 5px">
+            </p>
+
+            <p>
+                <input type="submit" class="btn btn-default"name="submit"  value="ArriereG" style="background-color: #e3e3e3">
+                <input type="submit" class="btn btn-default" name="submit"value="Arriere" style="margin: 0px">
+                <input type="submit" class="btn btn-default" name="submit" value="ArriereD" style="background-color: #e3e3e3">
+            </p>
+
+            <p>
+                <input type="submit" class="btn btn-success" name="submit" value="Photo" style="margin: 7px">
+            </p>
+
+        </form>
+        
+    </div>  
+
 """
