--- a/CodeRaspberryPi/PagesHTML/PagePhotos.html
+++ b/CodeRaspberryPi/PagesHTML/PagePhotos.html
@@ -1,178 +1,209 @@
 <html>
 
-<style>
+<html lang="en">
+    <head>
+      <!-- Source thème: https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
+      <title>RecoveryCar</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-header {
-    background-color: 070707;
-    text-align: center;
-}
+      <style>
 
-.onglet {
+      body {
+        font: 400 15px Lato, sans-serif;
+        line-height: 1.8;
+        color: #818181;
+      }
+      h2 {
+        font-size: 24px;
+        text-transform: uppercase;
+        color: #303030;
+        font-weight: 600;
+        margin-bottom: 10px;
+      }
+      h4 {
+        font-size: 19px;
+        line-height: 1.375em;
+        color: #303030;
+        font-weight: 400;
+        margin-bottom: 30px;
+      }
+      .onglet {
+                background-color: #04AA6D;
+                color: white;
+                padding: 14px 20px;
+                margin: 8px 0;
+                border: none;
+                cursor: pointer;
+                margin-top: 20px;
+            }
+      .jumbotron {
+        background-color: #00008B;
+        color: #fff;
+        padding: 100px 25px;
+        font-family: Montserrat, sans-serif;
+      }
+      .container-fluid {
+        padding: 60px 50px;
+      }
 
-    border: 2px black inset ;
-    color: black;
-    padding: 8px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    background-color: black;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
-
-.titreDiv {
-    margin: 30px;
-    border: black double 10px;
-    text-align: center;
-    width: auto;
-    height: auto;
-    background-color: EAEAEA;
-}
-
-.galerieDiv {
-
-    margin: 40px;
-    text-align: center;
-    border: black groove 2px;
-    background-color: EAEAEA;
-
-    height: auto;
-    width: auto;
-
-}
-
-.photo {
-
-    width: 225;
-    height: 150;
-
-    margin: 30px;
-
-    border: black 2px groove;
-
-    display: inline-block;
-
-
-
-}
-
-.bouton {
-    border: 2px black outset ;
-    border-radius: 60px;
-    color: black;
-    padding: 8px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 10px;
-    cursor: pointer;
-    background-color: DCDCDC;
-}
-
-
-
-
-</style>
-
+      .thumbnail img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 10px;
+      }
+      .carousel-control.right, .carousel-control.left {
+        background-image: none;
+        color: #F60000;
+      }
+      .carousel-indicators li {
+        border-color: #F60000;
+      }
+      .carousel-indicators li.active {
+        background-color: #F60000;
+      }
+      .item h4 {
+        font-size: 19px;
+        line-height: 1.375em;
+        font-weight: 400;
+        font-style: italic;
+        margin: 70px 0;
+      }
+      .item span {
+        font-style: normal;
+      }
 
 
-<head>
-    <meta charset="utf-8">
-    <title>RecoveryCar Live</title>
 
-    <! definir une image en favicon avec un lien au directory >
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-</head>
+      .panel-footer .btn {
+        margin: 15px 0;
+        background-color: #F60000;
+        color: #fff;
+      }
+      .navbar {
+        margin-bottom: 0;
+        background-color: #00008B;
+        z-index: 9999;
+        border: 0;
+        font-size: 12px !important;
+        line-height: 1.42857143 !important;
+        letter-spacing: 4px;
+        border-radius: 0;
+        font-family: Montserrat, sans-serif;
+      }
+      .navbar li a, .navbar .navbar-brand {
+        color: #fff !important;
+      }
+      .navbar-nav li a:hover, .navbar-nav li.active a {
+        color: #F60000 !important;
+        background-color: #fff !important;
+      }
+      .navbar-default .navbar-toggle {
+        border-color: transparent;
+        color: #fff !important;
+      }
+      footer .glyphicon {
+        font-size: 20px;
+        margin-bottom: 20px;
+        color: #F60000;
+      }
+      .slideanim {visibility:hidden;}
+      .slide {
+        animation-name: slide;
+        -webkit-animation-name: slide;
+        animation-duration: 1s;
+        -webkit-animation-duration: 1s;
+        visibility: visible;
+      }
 
-<! -- Header de la page avec les differents onglets disponibles sur le site -- >
+    .img-fluid {
+        margin: 30px;
+    }
 
-<header>
+      @keyframes slide {
+        0% {
+          opacity: 0;
+          transform: translateY(70%);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0%);
+        }
+      }
+      @-webkit-keyframes slide {
+        0% {
+          opacity: 0;
+          -webkit-transform: translateY(70%);
+        }
+        100% {
+          opacity: 1;
+          -webkit-transform: translateY(0%);
+        }
+      }
+      @media screen and (max-width: 768px) {
+        .col-sm-4 {
+          text-align: center;
+          margin: 25px 0;
+        }
+        .btn-lg {
+          width: 100%;
+          margin-bottom: 35px;
+        }
+      }
+      @media screen and (max-width: 480px) {
+        .logo {
+          font-size: 150px;
+        }
+      }
+      </style>
+    </head>
 
-    <form action="/" method="POST">
-            <p>
-                <input class="onglet" type="submit" name="submit" value="Accueil">
-                <input class="onglet" type="submit" name="submit" value="Conduite">
-                <input class="onglet" type="submit" name="submit" value="Galerie">
+    <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" style="text-align: center; background-color: #fff;">
 
-            </p>
-
-    </form>
-
-</header>
-
-<body style="background-color:C5C5C5">
-
-    <! -- Tite de la page -- >
-
-    <div class="titreDiv">
-        <h1 style="text-decoration: underline overline; font-size: 42px;">RecoveryCar</h1>
-        <h2 style="color: red;font-size: 30px; text-decoration: underline;">Live</h2>
-    </div>
-
-    <! -- Division de la galerie photos -- >
-
-    <div class="galerieDiv">
-
-        <div class="boutonsAction">
-
-            <h2 style="border: black 2px solid; border-left-width: 0px; border-right-width: 0px; background-color: DCDCDC; font-size: 24px;">Galerie photos</h2>
-
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#myPage">RecoveryCar</a>
         </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <form action="/" method="POST">
+                <p>
+                    <input class="onglet" type="submit" name="submit" value="Deconnexion">
+                    <input class="onglet" type="submit" name="submit" value="Conduite">
 
+                </p>
 
-        <p style="display: inline-block;">
+            </form>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-            <input class="bouton" type="submit" name="Sélectionner" value="Sélectionner" style="background-color: 0076FF;">
-            <input class="bouton" type="submit" name="Télécharger" value="Télécharger" style="background-color: 00FF59;">
-            <input class="bouton" type="submit" name="Supprimer" value="Supprimer" style="background-color: red;">
-            <input class="bouton" type="submit" name="Annuler" value="Annuler">
-
-        </p>
-
-        <p>
-            <img class="photo" >
-            <img class="photo" >
-            <img class="photo" >
-        </p>
-
-        <p>
-            <img class="photo" >
-            <img class="photo" >
-            <img class="photo" >
-        </p>
-
-        <p>
-            <img class="photo" >
-            <img class="photo" >
-            <img class="photo" >
-        </p>
-
-
-        <p style="text-align: center; display: inline-block;">
-
-            <input class="bouton" type="submit" name="Page précédente" value="&larr; Page précédente">
-
-            <p class="bouton" style="cursor: default;"> Page # / 10 </p>
-
-                <input class="bouton" type="submit" name="Page suivante" value="Page suivante &rarr;">
-
-        </p>
-
-
-
-
+    <div id="accueil" class="jumbotron text-center">
+      <h1 style="text-shadow:1px 1px 2px black;">RecoveryCar</h1>
+      <p style="color: #757575; font-size: 35px; text-shadow: 1px 1px 2px black;">Live</p>
     </div>
 
 
 
+    <div id="galeriePhotos" class="container-fluid text-center" style="background-color: #f1f1f1;">
+
+      <h1 style="text-shadow:1px 1px 2px black; color: #404040; padding: 25px; margin-bottom: 30px;">Galerie Photos</h1>
+
+    <!-- définir les images sur le raspberry pi -->
+    <img class="img-fluid" src="https://cdn.pixabay.com/photo/2023/05/11/05/40/blackbird-7985552_640.jpg" alt= "imgEUHHH" style=width:700px;height:700px;>
+    <img class="img-fluid" src="file:///home/cedric/H23-Gr3-Eq2-RecoveryCar/H23-Gr3-Eq2-RecoveryCar/CodeRaspberryPi/ImagesFichier/image0.jpg" alt= "imgOrrrh" style=width:700px;height:700px;>
 
 
-
-
-</body>
 </html>
