--- a/CodeRaspberryPi/PagesHTML/PageAcceuil.html
+++ b/CodeRaspberryPi/PagesHTML/PageAcceuil.html
@@ -1,77 +1,421 @@
 <!DOCTYPE html>
-<html lang="en">
-<div class="interaction">
-        <form action="/" method="POST">
-
-            <p>
-                <input class="bouton" type="submit" name="submit" value="Inscription">
-            </p>
-
-
-        </form>
-
-    </div>
-
+<html>
 <head>
-    <meta charset="UTF-8">
+    <!-- Source thème: https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
+    <title>RecoveryCar</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title></title>
-</head>
-<body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
-    <div class="container-fluid p-5 bg-dark text-white text-center">
-        <h1>RecoveryCar</h1>
-        <div class="container">
-        <h1>Les roues de l'espoir</h1>
-            <!--mettre images qui alternent-->
-        <p>Un monde infini de possibiliés vous attendent</p>
+        /*  source pur le bouton de connexion: https://www.w3schools.com/howto/howto_css_login_form.asp */
+
+
+        <
+        style >
+        body {
+            font: 400 15px Lato, sans-serif;
+            line-height: 1.8;
+            color: #818181;
+        }
+
+        h2 {
+            font-size: 24px;
+            text-transform: uppercase;
+            color: #303030;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
+
+        h4 {
+            font-size: 19px;
+            line-height: 1.375em;
+            color: #303030;
+            font-weight: 400;
+            margin-bottom: 30px;
+        }
+
+        .onglet {
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
+        .jumbotron {
+            background-color: #00008B;
+            color: #fff;
+            padding: 100px 25px;
+            font-family: Montserrat, sans-serif;
+        }
+
+        .container-fluid {
+            padding: 60px 50px;
+        }
+
+        .bg-grey {
+            background-color: #f6f6f6;
+        }
+
+        .thumbnail img {
+            width: 100%;
+            height: 100%;
+            margin-bottom: 10px;
+        }
+
+        .carousel-control.right, .carousel-control.left {
+            background-image: none;
+            color: #F60000;
+        }
+
+        .carousel-indicators li {
+            border-color: #F60000;
+        }
+
+        .carousel-indicators li.active {
+            background-color: #F60000;
+        }
+
+        .item h4 {
+            font-size: 19px;
+            line-height: 1.375em;
+            font-weight: 400;
+            font-style: italic;
+            margin: 70px 0;
+        }
+
+        .item span {
+            font-style: normal;
+        }
+
+
+        .panel-footer .btn {
+            margin: 15px 0;
+            background-color: #F60000;
+            color: #fff;
+        }
+
+        .navbar {
+            margin-bottom: 0;
+            background-color: #00008B;
+            z-index: 9999;
+            border: 0;
+            font-size: 12px !important;
+            line-height: 1.42857143 !important;
+            letter-spacing: 4px;
+            border-radius: 0;
+            font-family: Montserrat, sans-serif;
+        }
+
+        .navbar li a, .navbar .navbar-brand {
+            color: #fff !important;
+        }
+
+        .navbar-nav li a:hover, .navbar-nav li.active a {
+            color: #F60000 !important;
+            background-color: #fff !important;
+        }
+
+        .navbar-default .navbar-toggle {
+            border-color: transparent;
+            color: #fff !important;
+        }
+
+        footer .glyphicon {
+            font-size: 20px;
+            margin-bottom: 20px;
+            color: #F60000;
+        }
+
+        .slide {
+            animation-name: slide;
+            -webkit-animation-name: slide;
+            animation-duration: 1s;
+            -webkit-animation-duration: 1s;
+            visibility: visible;
+        }
+
+
+        @keyframes slide {
+            0% {
+                opacity: 0;
+                transform: translateY(70%);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0%);
+            }
+        }
+
+        @-webkit-keyframes slide {
+            0% {
+                opacity: 0;
+                -webkit-transform: translateY(70%);
+            }
+            100% {
+                opacity: 1;
+                -webkit-transform: translateY(0%);
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            .col-sm-4 {
+                text-align: center;
+                margin: 25px 0;
+            }
+
+            .btn-lg {
+                width: 100%;
+                margin-bottom: 35px;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .logo {
+                font-size: 150px;
+            }
+        }
+
+
+        /* Full-width input fields */
+        input[type=text], input[type=password] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        /* Set a style for all buttons */
+        button {
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+
+        button:hover {
+            opacity: 0.8;
+        }
+
+        /* Extra styles for the cancel button */
+        .cancelbtn {
+            width: auto;
+            padding: 10px 18px;
+            background-color: #f44336;
+        }
+
+        /* Center the image and position the close button */
+
+
+        .container {
+            padding: 16px;
+        }
+
+        span.psw {
+            float: right;
+            padding-top: 16px;
+        }
+
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: #00008B; /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+            padding-top: 60px;
+        }
+
+        /* Modal Content/Box */
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+            border: 1px solid #888;
+            width: 80%; /* Could be more or less, depending on screen size */
+        }
+
+
+        .close:hover,
+        .close:focus {
+            color: red;
+            cursor: pointer;
+        }
+
+        /* Add Zoom Animation */
+        .animate {
+            -webkit-animation: animatezoom 0.6s;
+            animation: animatezoom 0.6s
+        }
+
+        @-webkit-keyframes animatezoom {
+            from {
+                -webkit-transform: scale(0)
+            }
+            to {
+                -webkit-transform: scale(1)
+            }
+        }
+
+        @keyframes animatezoom {
+            from {
+                transform: scale(0)
+            }
+            to {
+                transform: scale(1)
+            }
+        }
+
+        /* Change styles for span and cancel button on extra small screens */
+        @media screen and (max-width: 300px) {
+            span.psw {
+                display: block;
+                float: none;
+            }
+
+            .cancelbtn {
+                width: 100%;
+            }
+        }
+
+        /* Le bouton de connexion--> */
+
+    </style>
+</head>
+<body data-spy="scroll" data-target=".navbar" data-offset="60" style="text-align: center; background-color: #fff;">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand">RecoveryCar</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+                <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Connexion
+                </button>
+
+
+                </form>
+            </ul>
         </div>
     </div>
+</nav>
 
-
-</body>
-</html>
-
-
-<!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-  <!-- Indicators/dots -->
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-  </div>
-
-  <!-- The slideshow/carousel -->
-    <!-- Mettre des images téléchargées dans le raspberry pi -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="C:\Users\JeanG\Documents\GitHub\H23-Gr3-Eq2-RecoveryCar\CodeRaspberryPi\Images\IMG_3711.jpg" alt="photo1" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src="chicago.jpg" alt="photo2" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src="ny.jpg" alt="photo3" class="d-block" style="width:100%">
-    </div>
-  </div>
-
-  <!-- Left and right controls/icons -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
+<div class="jumbotron text-center">
+    <h1 style="text-shadow:1px 1px 2px black;">RecoveryCar</h1>
+    <p style="color: #757575; font-size: 35px; text-shadow: 1px 1px 2px black;">Live</p>
 </div>
 
-<div class="container-fluid mt-3">
-  <h3>En savoir plus</h3>
-  <p>Un projet indépendant d'ici</p>
+
+<!-- Carrousel -->
+<!-- Source : https://www.w3schools.com/bootstrap/bootstrap_theme_company.asp -->
+
+<div class="container-fluid text-center bg-grey" style="margin: 100px; padding: 50px;">
+    <h2>À propos</h2>
+    <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <h4 style="font-size: smaller;"><span style="font-size: large;"> Objectif du RecoveryCar</span>
+                    <br><br>Le Recovery Car est un véhicule motorisé qui se déplace dans son environnement muni d'une
+                    caméra.<br>Grâce à sa petite taille, il peut se déplacer dans des endroits étroits généralement
+                    inaccessibles aux êtres humains.</h4>
+            </div>
+            <div class="item">
+                <h4 style="font-size: smaller;"><span style="font-size: large;">Vision en temps réel</span>
+                    <br><br>Le RecoveryCar est munis d'une caméra permettant d'avoir un retour d'images et de prendre
+                    des photos en direct.</h4>
+            </div>
+            <div class="item">
+                <h4 style="font-size: smaller;"><span style="font-size: large;">Analyse de l'environnement</span>
+                    <br><br>Le RecoveryCar est aussi munis d'un logiciel de reconnaissance d'objets.<br>Il est donc en
+                    mesure d'analyser l'environnement qui l'entoure.</h4>
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
+
+
+
+<div id="id01" class="modal">
+
+    <form class="modal-content animate"style="background-color:#87CEFA" action="/" method="POST">
+
+        <div class="container">
+            <label for="uname"style="color:#000000"><b>Indentifiant</b></label>
+            <input type="text" placeholder="Entrez votre identifiant" name="uname" required>
+
+            <label for="psw"style="color:#000000"><b>mot de Passe</b></label>
+            <input type="password" placeholder="Entrez votre mot de passe" name="psw" required>
+             <p>
+                <input class="onglet" type="submit" name="submit" value="Connexion">
+
+
+            </p>
+
+        </div>
+
+        <div class="container" style="background-color:#87CEFA">
+            <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
+                Annuler
+            </button>
+        </div>
+    </form>
+
+</div>
+
+<script>
+    // Get the modal
+    var modal = document.getElementById('id01');
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 
 </body>
 </html>
